# voulezvousvoucher

./: .gitignore  README.md  env.example  main.py  pyproject.toml
static/css/: style.css
templates/: base.html  bought.html  giveme.html  givemeno.html  index.html  index_login_required.html
