[tool.poetry]
name = "voulezvousvoucher"
version = "0.1.0"
description = "A website allowing access to a voucher for c-base members"
authors = ["Uwe Kamper <me@uwekamper.de>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
authlib = "1.2.1"
httpx = "^0.24.1"
itsdangerous = "^2.1.2"
pydantic-settings = "^2.0.3"
jinja2 = "^3.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
